23.06.25/0. AOAG Multi-Domain.md
# AOAG Multi Domain 
## I. Tổng quan  
### 1. SQL Server Always On Availability Groups 
- Giải pháp **HA (High Availability)** và **DR (Disaster Recovery)** cấp độ database, giúp đảm bảo dữ liệu sẵn sàng và giảm downtime.
- Cho phép nhiều bản sao của database chạy đồng thời trên các node khác nhau, với khả năng failover tự động hoặc thủ công.
### 2. Domainless Availability Groups
- Từ SQL Server 2016 trở đi, **Domain-Independent AG** cho phép cấu hình AG giữa các máy không cùng domain hoặc không có domain.
- **Sử dụng chứng chỉ (certificate)** để xác thực giữa các node thay vì tài khoản domain.
- Cấu hình phức tạp hơn nhưng rất phù hợp với các lab cá nhân hoặc môi trường không dùng Active Directory.
##  II. Triển khai lab 
### 1. Yêu cầu  
- **Hypervisor**: VMware Workstation
- **Số lượng máy ảo**:
  - `SQL01`: Primary replica
  - `SQL02`: Secondary replica
  - `SQL03`: DR replica, backup 
- **Yêu cầu máy ảo**:
  - Windows Server 2019/2022 Standard hoặc Datacenter
  - SQL Server 2019/2022 Enterprise Edition Standalone 
- ![images](./images/a-30.png)

### 2. Cấu hình mạng
- Tất cả máy ảo cùng **mạng ảo (Virtual Network)** trong VMware
- Cấu hình **static IP** cho từng node (không dùng DHCP)
- Cài DNS suffix thủ công để các máy nhận diện nhau theo FQDN

## 3. Cấu hình 

### 1. **Cấu hình DNS suffix và hostname**
- Trên cả ba máy, đặt DNS suffix giống nhau:
  - `System Properties` → `Computer Name` → `Change` → `More...` → điền `Primary DNS suffix`
- ![images](./images/a-26.png)
- ![images](./images/a-27.png)
- ![images](./images/a-28.png)
- ![images](./images/a-29.png)
- Chỉnh sửa file hosts trên 3 node 
```
192.168.50.146	node1.sql.local
192.168.50.147	node2.sql.local
192.168.50.148	node3.sql.local
```
- ![images](./images/a-31.png)


### 2. **Cài đặt và cấu hình WSFC (Failover Cluster)**
- Cài tính năng Failover Clustering trên cả 3 node:
	```powershell
	#- Enable Failover-Clustering
	Install-WindowsFeature -Name Failover-Clustering -IncludeManagementTools
	```
- ![images](./images/a-32.png)
- ![images](./images/a-33.png)
	
- Trên node1 tạo Cluster bằng lệnh sau 
	```powershell
	New-Cluster -Name sql-cluster -Node node1,node2,node3 -StaticAddress 192.168.50.151 -NoStorage -AdministrativeAccessPoint DNS
	```
	- `New-Cluster`: Lệnh tạo cluster mới
	- `-Name sql-cluster`: Tên cụm là "sql-cluster"
	- `-Node node1,node2,node3`: Ba node tham gia vào cụm
	- `-StaticAddress 192.168.50.151`: IP ảo dùng để truy cập cluster
	- `-NoStorage`: Không dùng ổ đĩa chung
	- `-AdministrativeAccessPoint DNS`: Không tạo object trong Active Directory — phù hợp môi trường không domain
- ![images](./images/a-34.png)
- ![images](./images/a-35.png)
- ![images](./images/a-36.png)


---

### 3. **Cấu hình SQL Server**
- Bật tính năng AlwaysOn trên instance SQL từng node :
  - SQL Server Configuration Manager → SQL Server Services → Properties → AlwaysOn High Availability → Enable
- ![images](./images/a-37.png)


---

### 4. **Tạo chứng chỉ, endpoint, login trên các node**
- Tạo chứng chỉ, endpoint:
	- Tạo khóa chính (Database Master Key) cho cơ sở dữ liệu
	- Tạo chứng chỉ bảo mật (Security Certificate)
	- Sao lưu phần khóa công khai (public key) của chứng chỉ.
	- Tạo endpoint SQL Server mới dùng cho Database Mirroring
- Ví dụ trên node 1
```sql
USE master
GO

-- Create a database master key
CREATE MASTER KEY ENCRYPTION BY PASSWORD = 'Qaz@123'
GO

-- Create a new certificate
CREATE CERTIFICATE Node1_Cert_Private
WITH SUBJECT = 'Node1_Cert_Private',
expiry_date = '2027-06-16T17:00:00'
GO

-- Backup the public key of the certificate to the filesystem
BACKUP CERTIFICATE Node1_Cert_Private
TO FILE = 'c:\Temp\Node1_Cert_Public.cert'
GO

-- Create an endpoint for the Availability Group
CREATE ENDPOINT AOAG_Endpoint
STATE = STARTED
AS TCP
(
	LISTENER_PORT = 5022
)
FOR DATABASE_MIRRORING
(
	AUTHENTICATION = CERTIFICATE Node1_Cert_Private,
	ROLE = ALL, 
	ENCRYPTION = REQUIRED ALGORITHM AES
)
GO
```

- Node 2
```sql
USE master
GO

-- Create a database master key
CREATE MASTER KEY ENCRYPTION BY PASSWORD = 'Qaz@123'
GO

-- Create a new certificate
CREATE CERTIFICATE Node2_Cert_Private
WITH SUBJECT = 'Node2_Cert_Private',
expiry_date = '2027-06-16T17:00:00'
GO

-- Backup the public key of the certificate to the filesystem
BACKUP CERTIFICATE Node2_Cert_Private
TO FILE = 'c:\Temp\Node2_Cert_Public.cert'
GO

-- Create an endpoint for the Availability Group
CREATE ENDPOINT AOAG_Endpoint
STATE = STARTED
AS TCP
(
	LISTENER_PORT = 5022
)
FOR DATABASE_MIRRORING
(
	AUTHENTICATION = CERTIFICATE Node2_Cert_Private,
	ROLE = ALL, 
	ENCRYPTION = REQUIRED ALGORITHM AES
)
GO
```

- Node 3
```sql
USE master
GO

-- Create a database master key
CREATE MASTER KEY ENCRYPTION BY PASSWORD = 'Qaz@123'
GO

-- Create a new certificate
CREATE CERTIFICATE Node3_Cert_Private
WITH SUBJECT = 'Node3_Cert_Private',
expiry_date = '2027-06-16T17:00:00'
GO

-- Backup the public key of the certificate to the filesystem
BACKUP CERTIFICATE Node3_Cert_Private
TO FILE = 'c:\Temp\Node3_Cert_Public.cert'
GO

-- Create an endpoint for the Availability Group
CREATE ENDPOINT AOAG_Endpoint
STATE = STARTED
AS TCP
(
	LISTENER_PORT = 5022
)
FOR DATABASE_MIRRORING
(
	AUTHENTICATION = CERTIFICATE Node3_Cert_Private,
	ROLE = ALL, 
	ENCRYPTION = REQUIRED ALGORITHM AES
)
GO
```

- Tạo các login với cer public trên các node:
	- Tạo login và user đại diện cho node.
	- Cấp quyền sử dụng khóa công khai của chứng chỉ từ các node.
	- Cấp quyền CONNECT trên endpoint tương ứng cho login vừa tạo.
- Node 1 
```
-- Create login for the other node
CREATE LOGIN Node2Login WITH PASSWORD = 'Qaz@123'
CREATE LOGIN Node3Login WITH PASSWORD = 'Qaz@123'
GO

-- Create user for the login
CREATE USER Node2User FOR LOGIN Node2Login
CREATE USER Node3User FOR LOGIN Node3Login
GO

-- Import the public key portion of the certificate from the other node
CREATE CERTIFICATE Node2_Cert_Public
AUTHORIZATION Node2User
FROM FILE = 'c:\Temp\Node2_Cert_Public.cert'
GO

CREATE CERTIFICATE Node3_Cert_Public
AUTHORIZATION Node3User
FROM FILE = 'c:\Temp\Node3_Cert_Public.cert'
GO

-- Grant the CONNECT permission to the login
GRANT CONNECT ON ENDPOINT::AOAG_Endpoint TO Node2Login
GRANT CONNECT ON ENDPOINT::AOAG_Endpoint TO Node3Login
GO
```

- Node 2
```
-- Create login for the other node
CREATE LOGIN Node1Login WITH PASSWORD = 'Qaz@123'
CREATE LOGIN Node3Login WITH PASSWORD = 'Qaz@123'
GO

-- Create user for the login
CREATE USER Node1User FOR LOGIN Node1Login
CREATE USER Node3User FOR LOGIN Node3Login
GO

-- Import the public key portion of the certificate from the other node
CREATE CERTIFICATE Node1_Cert_Public
AUTHORIZATION Node1User
FROM FILE = 'c:\Temp\Node1_Cert_Public.cert'
GO

CREATE CERTIFICATE Node3_Cert_Public
AUTHORIZATION Node3User
FROM FILE = 'c:\Temp\Node3_Cert_Public.cert'
GO
-- Grant the CONNECT permission to the login
GRANT CONNECT ON ENDPOINT::AOAG_Endpoint TO Node1Login
GRANT CONNECT ON ENDPOINT::AOAG_Endpoint TO Node3Login
GO
```

- Node 3
```
-- Create login for the other node
CREATE LOGIN Node1Login WITH PASSWORD = 'Qaz@123'
CREATE LOGIN Node2Login WITH PASSWORD = 'Qaz@123'
GO

-- Create user for the login
CREATE USER Node1User FOR LOGIN Node1Login
CREATE USER Node2User FOR LOGIN Node2Login
GO

-- Import the public key portion of the certificate from the other node
CREATE CERTIFICATE Node1_Cert_Public
AUTHORIZATION Node1User
FROM FILE = 'c:\Temp\Node1_Cert_Public.cert'
GO

CREATE CERTIFICATE Node2_Cert_Public
AUTHORIZATION Node2User
FROM FILE = 'c:\Temp\Node2_Cert_Public.cert'
GO
-- Grant the CONNECT permission to the login
GRANT CONNECT ON ENDPOINT::AOAG_Endpoint TO Node1Login
GRANT CONNECT ON ENDPOINT::AOAG_Endpoint TO Node2Login
GO
```

### 5. **Triển khai Availability Group**
- Sau khi hoàn tất cấu hình bảo mật giữa các nút, hệ thống sẵn sàng để khởi tạo Availability Group. Quy trình bao gồm:
	- Tạo cơ sở dữ liệu mẫu: Một cơ sở dữ liệu mới được tạo trên nút chính để minh họa việc đồng bộ hóa dữ liệu.
	- Thực hiện sao lưu toàn bộ (FULL BACKUP): Đây là bước bắt buộc trước khi thêm cơ sở dữ liệu vào Availability Group.
	- Tạo Availability Group: Availability Group mới được khai báo, bao gồm tối thiểu hai bản sao (primary và secondary replica).
	- Trong mô hình này gồm 1 Primary 2 secondary
- Thực hiện trên node 1 

- Tạo DB mẫu 
```
USE master
GO

-- Create a new database
CREATE DATABASE AOAG_TEST_DB
GO

-- Use the database
USE AOAG_TEST_DB
GO

-- Create a simple table
CREATE TABLE Foo
(
	Bar INT NOT NULL
)
GO

```

- Backup 
```
-- Make a Full Backup of the database
BACKUP DATABASE AOAG_TEST_DB TO DISK = 'c:\Temp\AOAG_TEST_DB.bak'
GO
```
- Tạo AOAG 
```

USE master
GO

-- Create a new Availability Group with 2 replicas
CREATE AVAILABILITY GROUP AOAG_MULTI_DOMAIN
WITH
(
	AUTOMATED_BACKUP_PREFERENCE = PRIMARY,
	DB_FAILOVER = ON,
	DTC_SUPPORT = NONE
)
FOR DATABASE [AOAG_TEST_DB]
REPLICA ON
'NODE1' WITH
(
	ENDPOINT_URL = 'TCP://node1.sql.local:5022', 
	FAILOVER_MODE = AUTOMATIC, 
	AVAILABILITY_MODE = SYNCHRONOUS_COMMIT, 
	SECONDARY_ROLE
	(
		ALLOW_CONNECTIONS = NO
	)
),
'NODE2' WITH
(
	ENDPOINT_URL = 'TCP://node2.sql.local:5022', 
	FAILOVER_MODE = AUTOMATIC, 
	AVAILABILITY_MODE = SYNCHRONOUS_COMMIT, 
	SECONDARY_ROLE
	(
		ALLOW_CONNECTIONS = NO
	)
),
'NODE3' WITH
(
	ENDPOINT_URL = 'TCP://node3.sql.local:5022', 
	FAILOVER_MODE = AUTOMATIC, 
	AVAILABILITY_MODE = SYNCHRONOUS_COMMIT, 
	SECONDARY_ROLE
	(
		ALLOW_CONNECTIONS = NO
	)
)
GO
```

-- Make a TxLog Backup of the database
BACKUP LOG AOAG_TEST_DB TO DISK = 'c:\Temp\AOAG_TEST_DB.trn'
GO

-- Restore the Full Backup with NORECOVEY
RESTORE DATABASE AOAG_TEST_DB FROM DISK = 'c:\Temp\AOAG_TEST_DB.bak' WITH NORECOVERY
GO

-- Restore the TxLog Backup with NORECOVERY
RESTORE LOG AOAG_TEST_DB FROM DISK = 'c:\Temp\AOAG_TEST_DB.trn' WITH NORECOVERY
GO


- Trên các node còn lại join AOAG 
```
ALTER AVAILABILITY GROUP [AOAG_MULTI_DOMAIN] JOIN
GO
```
ALTER DATABASE AOAG_TEST_DB_2 SET HADR AVAILABILITY GROUP = AOAG_MULTI_DOMAIN
GO
- Kiểm tra quá trình join

- Test failover

- Thêm DB 



USE master
GO

-- Create a new Availability Group with 2 replicas
CREATE AVAILABILITY GROUP TestAG
WITH
(
	AUTOMATED_BACKUP_PREFERENCE = PRIMARY,
	BASIC,
	DB_FAILOVER = ON,
	DTC_SUPPORT = NONE
)
FOR DATABASE [TestDatabase1]
REPLICA ON
'NODE1' WITH
(
	ENDPOINT_URL = 'TCP://node1.sql.local:5022', 
	FAILOVER_MODE = AUTOMATIC, 
	AVAILABILITY_MODE = SYNCHRONOUS_COMMIT, 
	SECONDARY_ROLE
	(
		ALLOW_CONNECTIONS = NO
	)
),
'NODE2' WITH
(
	ENDPOINT_URL = 'TCP://node2.sql.local:5022', 
	FAILOVER_MODE = AUTOMATIC, 
	AVAILABILITY_MODE = SYNCHRONOUS_COMMIT, 
	SECONDARY_ROLE
	(
		ALLOW_CONNECTIONS = NO
	)
),
'NODE3' WITH
(
	ENDPOINT_URL = 'TCP://node3.sql.local:5022', 
	FAILOVER_MODE = AUTOMATIC, 
	AVAILABILITY_MODE = SYNCHRONOUS_COMMIT, 
	SECONDARY_ROLE
	(
		ALLOW_CONNECTIONS = NO
	)
)
GO